# money_maker

./: '  .env.example  .gitignore  Cargo.toml  Makefile  README.md  docker-compose.yaml
app/: Cargo.toml
app/src/: lib.rs  main.rs
app/src/db/: pg.rs  repo.rs
app/src/models/: common.rs
app/src/strategy/: strategy.rs
app/src/terminal/: terminal.rs
app/src/utils/: logger.rs
cron/: Cargo.toml
cron/src/: main.rs
migrations/: 20250327110105_init.sql  20250403081032_operation.sql  20250406112455_attempts.sql  20250427034732_trades.sql
scripts/: file_names.sh
src/: lib.rs  main.rs
src/db/: pg.rs
src/models/: common.rs
src/strategy/: strategy.rs
src/terminal/: terminal.rs
src/utils/: logger.rs
terminal/: Cargo.toml
terminal/src/: lib.rs  main.rs
