[package]
name = "money_maker"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.40", features = ["serde"] }
clap = { version = "4.5.34", features = ["derive"] }
csv = "1.3.1"
dotenv = "0.15.0"
log = "0.4.27"
plotters = "0.3.7"
raylib = "5.5.0"
regex = "1.11.1"
reqwest = "0.12.15"
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.3", features = ["bigdecimal", "chrono", "postgres", "runtime-tokio", "uuid"] }
tokio = { version = "1.44.1", features = ["full"] }
uuid = { version = "1.16.0", features = ["v4"] }
